test/assets/invalid/expect-item.hs
import Data.Char (isSpace)
-- Expected an item, got a list

a :: Bool
a = isSpace ['a']
